@@ -1467,8 +1467,8 @@ body {
 
   <p>The ‘<a href="#mask-type"><code class=property>mask-type</code></a>’
    property defines whether the content of the <a href="#MaskElement"><code
-   class=element-name>&lt;mask></code></a> is treated as as luminance mask or
-   alpha mask, as described in <a href="#MaskValues">Calculating mask
+   class=element-name>&lt;mask></code></a> element is treated as as luminance
+   mask or alpha mask, as described in <a href="#MaskValues">Calculating mask
    values</a>.
 
   <p>Values have the following meanings:
@@ -1483,6 +1483,60 @@ body {
 
    <dd>Indicates that the alpha values of the mask should be used.
   </dl>
+
+  <p>The ‘<a href="#mask-type"><code class=property>mask-type</code></a>’
+   property allows the author of the <a href="#MaskElement"><code
+   class=element-name>&lt;mask></code></a> element to specify the preferred
+   masking operation. However, the author can override this preference by
+   setting the ‘<a href="#mask-source-type"><code
+   class=property>mask-source-type</code></a>’ value to something different
+   than ‘<a href="#lsquoautorsquo"><code class=css>auto</code></a>’ on
+   the masked content.
+
+  <div class=example>
+   <p>In the following example the computed value of ‘<a
+    href="#mask-type"><code class=property>mask-type</code></a>’ is ‘<a
+    href="#lsquoluminancersquo"><code class=css>luminance</code></a>’ and
+    the computed value of ‘<a href="#mask-source-type"><code
+    class=property>mask-source-type</code></a>’ is ‘<a
+    href="#lsquoautorsquo"><code class=css>auto</code></a>’. The UA must
+    follow the preferred masking operation defined on the <a
+    href="#MaskElement"><code class=element-name>&lt;mask></code></a>
+    element.
+
+   <pre><code>
+&lt;svg>
+  &lt;mask style="mask-type: luminance;" id="mask">
+    ...
+  &lt;/mask>
+&lt;/svg>
+
+&lt;p style="mask-image: url(#mask); mask-source-type: auto;">
+  This is the masked content.
+&lt;/p>
+</code></pre>
+
+   <p>In the next example the computed value of ‘<a
+    href="#mask-source-type"><code
+    class=property>mask-source-type</code></a>’ is ‘<a
+    href="#lsquoalpharsquo"><code class=css>alpha</code></a>’ and overrides
+    the preference on the <a href="#MaskElement"><code
+    class=element-name>&lt;mask></code></a> element that is computed to ‘<a
+    href="#lsquoluminancersquo"><code class=css>luminance</code></a>’. The
+    mask source is used as an alpha mask.
+
+   <pre><code>
+&lt;svg>
+  &lt;mask style="mask-type: luminance;" id="mask2">
+    ...
+  &lt;/mask>
+&lt;/svg>
+
+&lt;p style="mask-image: url(#mask2); mask-source-type: alpha;">
+  This is the masked content.
+&lt;/p>
+</code></pre>
+  </div>
 
   <p>The ‘<a href="#mask-type"><code class=property>mask-type</code></a>’
    property is a presentation attribute for SVG elements.
