@@ -1,4 +1,7 @@
 2013-04-05  Dirk Schulze  <dschulze@adobe.com>
+	Clarify the difference of 'mask-type' and 'mask-source-type'. Added an example.
+
+2013-04-05  Dirk Schulze  <dschulze@adobe.com>
 	Remove <clip-box>; use [ <box> | no-clip ] instead.
 
 2013-04-05  Dirk Schulze  <dschulze@adobe.com>
